--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,9 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/app/sass"]
+            },
             "scripts": []
           },
           "configurations": {
@@ -92,6 +95,9 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/app/sass"]
+            },
             "scripts": []
           }
         }
